addon/content/styles/beaver.css
/* ... */
[id^="beaver-pane-"] .shadow-md { box-shadow: 0 0.375rem 0.75rem rgba(0, 0, 0, 0.15); }
[id^="beaver-pane-"] .shadow-sm-top { box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1), 0 -0.075rem 0.25rem rgba(0, 0, 0, 0.075); }
[id^="beaver-pane-"] .shadow-md-top { box-shadow: 0 0.375rem 0.75rem rgba(0, 0, 0, 0.125), 0 -0.075rem 0.75rem rgba(0, 0, 0, 0.075); }
[id^="beaver-pane-"] .shadow-lg { box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); }
[id^="beaver-pane-"] .shadow-xl { box-shadow: 0 0.75rem 1.5rem rgba(0, 0, 0, 0.15); }

/* Scrollbar */
[id^="beaver-pane-"] .scrollbar {
    scrollbar-color: var(--color-scrollbar) var(--color-scrollbar-background);
}


/* [id^="beaver-pane-"] .markdown {
    margin-top: 0px !important;
    width: 100%;
    line-height: 1.5;
} */

[id^="beaver-pane-"] .markdown p {
    margin-block-start: 0px !important;
    margin-block-end: 0px !important;
}

[id^="beaver-pane-"] .markdown .katex {
    /* Styles for inline math */
    display: inline-block;
    margin: 0 0.1em;
    font-size: 1.1em !important;
}

[id^="beaver-pane-"] .markdown .katex-display {
    /* Styles for display math */
    /* display: block; */
    /* font-size: 1.2em !important; */
    padding: 0rem;
    overflow: auto;
}

[id^="beaver-pane-"] .markdown a {
    color: var(--tag-blue);
    opacity: 0.8;
    text-decoration: none;
}

[id^="beaver-pane-"] .markdown a:hover {
    text-decoration: underline;
}

[id^="beaver-pane-"] .markdown span.zotero-citation {
    cursor: pointer;
    font-size: 0.8em;
    margin-left: 0.15em;
    text-decoration: none;
    background: var(--fill-quinary);
    padding-right: 0.35em;
    padding-left: 0.35em;
    border-radius: 0.25em;
    border: 1px solid var(--fill-quinary);
    color: var(--fill-secondary);
    transition: all 0.2s ease-in-out;
}

[id^="beaver-pane-"] .markdown span.zotero-citation:hover {
    color: var(--fill-primary);
    /* border: 1px solid var(--fill-quarternary); */
}

[id^="beaver-pane-"] .markdown span.zotero-citation.streaming {
    cursor: default;
    opacity: 0.4;
}

[id^="beaver-pane-"] .markdown span.zotero-citation.streaming:hover {
    color: var(--fill-secondary);
}

/* Invalid citation styling - similar to streaming but with cursor help to indicate tooltip */
[id^="beaver-pane-"] .markdown span.zotero-citation.invalid {
    cursor: help;
    opacity: 0.4;
}

[id^="beaver-pane-"] .markdown span.zotero-citation.invalid:hover {
    color: var(--fill-secondary);
}

/* External citation styling - slightly different color for distinction */
[id^="beaver-pane-"] .markdown span.zotero-citation.external-citation {
    background: var(--tag-blue-quinary);
    border-color: var(--tag-blue-tertiary);
    color: var(--tag-blue);
}

[id^="beaver-pane-"] .markdown span.zotero-citation.external-citation:hover {
    background: var(--tag-blue-quarternary);
    color: var(--tag-blue-primary);
}

[id^="beaver-pane-"] .markdown span.zotero-citation.external-citation.streaming:hover {
    background: var(--tag-blue-quinary);
    color: var(--tag-blue);
}

[id^="beaver-pane-"] .markdown h1,
[id^="beaver-pane-"] .markdown h2,
[id^="beaver-pane-"] .markdown h3,
[id^="beaver-pane-"] .markdown h4,
[id^="beaver-pane-"] .markdown h5,
[id^="beaver-pane-"] .markdown h6 {
    margin-top: 6px;
    margin-bottom: 6px;
    font-weight: 600;
    line-height: 1.5;
}

[id^="beaver-pane-"] .markdown h1 {
    font-size: 1.35em;
    padding-top: 0.3em;
    padding-bottom: 0.2em;
}

[id^="beaver-pane-"] .markdown h2 {
    font-size: 1.2em;
    font-weight: 700;
    padding-top: 0.3em;
    /* padding-bottom: 0.1em; */
}

[id^="beaver-pane-"] .markdown h3 {
    font-size: 1.1em;
    padding-top: 0.15em;
}

[id^="beaver-pane-"] .markdown h4 {
    font-size: 1em;
}

[id^="beaver-pane-"] .markdown h5 {
    font-size: 0.9em;
}

[id^="beaver-pane-"] .markdown h6 {
    font-size: 0.8em;
    color: var(--fill-secondary);
}

[id^="beaver-pane-"] .markdown p:not(:last-child) {
    margin-top: 0px !important;
    margin-bottom: 0.5em !important;
}

[id^="beaver-pane-"] .markdown ul,
[id^="beaver-pane-"] .markdown ol {
    margin: 1em 0;
    padding-left: 2em;
    margin-block-start: 0.75em;
    margin-block-end: 0.75em;
}

[id^="beaver-pane-"] .markdown ul {
    list-style-type: disc;
}

[id^="beaver-pane-"] .markdown ol {
    list-style-type: decimal;
}

[id^="beaver-pane-"] .markdown li {
    margin-bottom: 0.5em;
    line-height: 1.5;
}

[id^="beaver-pane-"] .markdown ul ul,
[id^="beaver-pane-"] .markdown ol ul {
    list-style-type: circle;
    margin-top: 0.3em;
}

[id^="beaver-pane-"] .markdown ol ol,
[id^="beaver-pane-"] .markdown ul ol {
    list-style-type: lower-latin;
    margin-top: 0.3em;
}

[id^="beaver-pane-"] .markdown ul ul ul,
[id^="beaver-pane-"] .markdown ol ul ul {
    list-style-type: square;
}

[id^="beaver-pane-"] .markdown ol ol ol,
[id^="beaver-pane-"] .markdown ul ol ol {
    list-style-type: lower-roman;
}

[id^="beaver-pane-"] .markdown pre {
    margin: 1.2em 0;
    padding: 1em;
    /* width: 100%; */
    /* max-width: 100%; */
    overflow-x: auto;
    font-size: 90%;
    line-height: 1.45;
    background-color: var(--fill-senary) !important;
    border: 1px solid var(--fill-quinary) !important;
    border-radius: 2px;
}

[id^="beaver-pane-"] .markdown :not(pre)>code {
    font-size: 85%;
    padding-top: 0.15em;
    padding-bottom: 0.15em;
    padding-left: 0.2em;
    padding-right: 0.2em;
    border-radius: 4px;
    background-color: var(--fill-quarternary) !important;
    border: 1px solid var(--fill-quarternary) !important;
} 

[id^="beaver-pane-"] .markdown blockquote {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
    padding: 0 1em;
    border-left: 1px solid var(--fill-quarternary);
}

[id^="beaver-pane-"] .markdown img {
    max-width: 100%;
    box-sizing: content-box;
    background-color: var(--fill-primary);
}
/* ... */

